force-app/main/default/objects/Job__c/fields/Job_Category__c.field-meta.xml
<CustomField>
    <fullName>Job_Category__c</fullName>
    <label>Job Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Main_technology__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Job_Category</valueSetName>
    </valueSet>
</CustomField>