force-app/main/default/objects/Job__c/fields/Job_Source__c.field-meta.xml
<CustomField>
    <fullName>Job_Source__c</fullName>
    <label>Job Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>