force-app/main/default/objects/Job__c/fields/Main_technology__c.field-meta.xml
<CustomField>
    <fullName>Main_technology__c</fullName>
    <label>Main technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Main_technology</valueSetName>
    </valueSet>
</CustomField>