force-app/main/default/objects/Job__c/fields/Number_of_applicants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_applicants__c</fullName>
    <label>Number of applicants</label>
    <summaryForeignKey>Job_Application__c.Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>