force-app/main/default/objects/Job__c/fields/Published_on__c.field-meta.xml
<CustomField>
    <fullName>Published_on__c</fullName>
    <label>Published on</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Published_on</valueSetName>
    </valueSet>
</CustomField>