force-app/main/default/objects/Job__c/fields/Salary_per_year__c.field-meta.xml
<CustomField>
    <fullName>Salary_per_year__c</fullName>
    <label>Salary per year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>