force-app/main/default/objects/Job__c/fields/Type_of_employment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_employment__c</fullName>
    <label>Type of employment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_employment</valueSetName>
    </valueSet>
</CustomField>