force-app/main/default/objects/Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Main_technology__c</columns>
    <columns>Status__c</columns>
    <columns>Job_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>