force-app/main/default/objects/Job__c/listViews/Open_Jobs.listView-meta.xml
<ListView>
    <fullName>Open_Jobs</fullName>
    <columns>NAME</columns>
    <columns>Main_technology__c</columns>
    <columns>Status__c</columns>
    <columns>Job_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Jobs</label>
</ListView>